--- a/personal.html
+++ b/personal.html
@@ -29,7 +29,7 @@
 		<img src = "imgs/wisconsin_dells.jpg" alt="Children in next to Sasquatch Lake sign" width="25"/>
 		<img src = "imgs/badlands.jpg" alt="Children in front of Badlands sign" width="1000"/>
 		<img src = "imgs/falling.jpg" alt="Boy holding onto cliff" width="25"/>
-		<img src = "imgs/jewel_cave.jpg" alt="Chidlren in front of Jewel Cave sign" width="1000"/>
+		<img src = "imgs/jewel_cave.JPG" alt="Chidlren in front of Jewel Cave sign" width="1000"/>
 	</main>
 
 	<footer>
